--- a/src/main/resources/cucumber-junit-runner.java.vm
+++ b/src/main/resources/cucumber-junit-runner.java.vm
@@ -8,7 +8,7 @@ import org.junit.runner.RunWith;
 import cucumber.api.CucumberOptions;
 import cucumber.api.junit.Cucumber;
 
-@RunWith(Cucumber.class)
+@RunWith(CucumberwithSerenity.class)
 @CucumberOptions(
         strict = $strict,
         features = {"$featureFile"},
